Fixed top two buttons, now align with each other and look better

--- a/static/styles/mockup.css
+++ b/static/styles/mockup.css
@@ -8,15 +8,13 @@
     background: black;
   }
 
-  .profile-container {
-    position: absolute;
-    top: 8%;
-    left: 84%;
-  }
-  .playlist-container {
-    position: absolute;
-    top: 8%;
-    left: 16%;
+
+  #top_button_bar{
+    position:absolute;
+    display: flex;
+    justify-content: space-between;
+    width: -webkit-fill-available;
+    margin: 7%;
   }
 
   .container {
@@ -55,13 +53,14 @@
     padding: 14px 32px;
     border-color: transparent;
     font-size : 20px;
+    height: 80px;
   }
 
   .btn {
     background-color: #1ED760;
   }
 
-  .round-button {
+  /* .round-button {
     width:10%;
   }
   .round-button-circle {
@@ -93,7 +92,7 @@
     font-size:1.2em;
     font-weight:bold;
     text-decoration:none;
-  }
+  } */
   .dropdown_option{
     margin: 4px 10px;
     font-weight: bold;
@@ -102,13 +101,6 @@
   }
   .dropdown_option:hover{
     background-color:rgba(103,103,103, 0.8);
-  }
-
-  .dropdown_option.toggle_off:hover {
-    background-color:white
-  }
-  .dropdown_option.toggle_off:hover {
-    background-color:darkgray
   }
 
   .toggle_off {
@@ -304,8 +296,8 @@
 }
 
 
-.menubg {
-  display:flex;
+.menu_bg {
+  display: flex;
   justify-content: space-evenly;
 }
 #typebox {
